fixed overflow issue

--- a/www-v2/styles/common.css
+++ b/www-v2/styles/common.css
@@ -98,7 +98,7 @@ body {
   background-color: $color-background;
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 li,
